# real-time-aggregator

./: Cargo.toml  README.md
src/: config.rs  listener.rs  main.rs  processor.rs
tests/: integration_tests.rs
