[package]
name = "real-time-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
# futures = "0.3.31"
redis = { version = "0.28.2", features = ["tokio-comp"]}
tokio = { version = "1.43.0", features = ["full"] }
# tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio-stream = "0.1.17"
